deploy/kubernetes/base/mf-apisix-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-apisix-dashboard
  name: mf-apisix-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mf-apisix-dashboard
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mf_net: "true"
        io.kompose.service: mf-apisix-dashboard
    spec:
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/lwopen/microbase_apisix-dashboard:latest
          name: mf-apisix-dashboard
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /usr/local/apisix-dashboard/conf/conf.yaml
              name: mf-apisix-dashboard-claim0
      restartPolicy: Always
      volumes:
        - name: mf-apisix-dashboard-claim0
          persistentVolumeClaim:
            claimName: mf-apisix-dashboard-claim0
status: {}
