deploy/kubernetes/base/mf-etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-etcd
  name: mf-etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mf-etcd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mf_net: "true"
        io.kompose.service: mf-etcd
    spec:
      containers:
        - env:
            - name: ALLOW_NONE_AUTHENTICATION
              value: "yes"
            - name: ETCD_ADVERTISE_CLIENT_URLS
              value: http://mf_etcd:2379
            - name: ETCD_LISTEN_CLIENT_URLS
              value: http://0.0.0.0:2379
          image: registry.cn-hangzhou.aliyuncs.com/lwopen/microbase_etcd:latest
          name: etcd
          ports:
            - containerPort: 2379
            - containerPort: 2380
          resources: {}
          volumeMounts:
            - mountPath: /bitnami/etcd
              name: mf-etcd-data
      restartPolicy: Always
      volumes:
        - name: mf-etcd-data
          persistentVolumeClaim:
            claimName: mf-etcd-data
status: {}
