deploy/kubernetes/base/mf-etcd-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-etcd-web
  name: mf-etcd-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mf-etcd-web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mf_net: "true"
        io.kompose.service: mf-etcd-web
    spec:
      containers:
        - image: evildecay/etcdkeeper
          name: mf-etcd-web
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
