deploy/kubernetes/base/mf-gozero-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-gozero
  name: mf-gozero
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mf-gozero
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mf_net: "true"
        io.kompose.service: mf-gozero
    spec:
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/lwopen/microbase_golang_gozero:latest
          name: mf-gozero
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /code
              name: mf-gozero-claim0
          workingDir: /code
      restartPolicy: Always
      volumes:
        - name: mf-gozero-claim0
          persistentVolumeClaim:
            claimName: mf-gozero-claim0
status: {}
