deploy/kubernetes/base/mf-grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-grafana
  name: mf-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mf-grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mf_net: "true"
        io.kompose.service: mf-grafana
    spec:
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/lwopen/microbase_grafana:latest
          name: mf-grafana
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /etc/grafana/provisioning
              name: mf-grafana-claim0
            - mountPath: /var/lib/grafana
              name: mf-grafana-claim1
            - mountPath: /etc/grafana/grafana.ini
              name: mf-grafana-claim2
      restartPolicy: Always
      volumes:
        - name: mf-grafana-claim0
          persistentVolumeClaim:
            claimName: mf-grafana-claim0
        - name: mf-grafana-claim1
          persistentVolumeClaim:
            claimName: mf-grafana-claim1
        - name: mf-grafana-claim2
          persistentVolumeClaim:
            claimName: mf-grafana-claim2
status: {}
