deploy/kubernetes/base/mf-jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-jaeger
  name: mf-jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mf-jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mf_net: "true"
        io.kompose.service: mf-jaeger
    spec:
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/lwopen/microbase_jaeger:latest
          name: mf-jaeger
          ports:
            - containerPort: 16686
          resources: {}
          volumeMounts:
            - mountPath: /tmp
              name: mf-jagerdata
      restartPolicy: Always
      volumes:
        - name: mf-jagerdata
          persistentVolumeClaim:
            claimName: mf-jagerdata
status: {}
