deploy/kubernetes/base/mf-prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-prometheus
  name: mf-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mf-prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mf_net: "true"
        io.kompose.service: mf-prometheus
    spec:
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/lwopen/microbase_prometheus:latest
          name: mf-prometheus
          ports:
            - containerPort: 9090
          resources: {}
          volumeMounts:
            - mountPath: /opt/bitnami/prometheus/conf/prometheus.yml
              name: mf-prometheus-claim0
            - mountPath: /opt/bitnami/prometheus/conf/targets
              name: mf-prometheus-claim1
      restartPolicy: Always
      volumes:
        - name: mf-prometheus-claim0
          persistentVolumeClaim:
            claimName: mf-prometheus-claim0
        - name: mf-prometheus-claim1
          persistentVolumeClaim:
            claimName: mf-prometheus-claim1
status: {}
