deploy/kubernetes/base/mf_apisix-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-apisix-dashboard
  name: mf_apisix-dashboard
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: mf-apisix-dashboard
status:
  loadBalancer: {}
