deploy/kubernetes/base/mf_apisix-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-apisix
  name: mf_apisix
spec:
  ports:
    - name: "9080"
      port: 9080
      targetPort: 9080
    - name: "9091"
      port: 9091
      targetPort: 9091
    - name: "9443"
      port: 9443
      targetPort: 9443
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: mf-apisix
status:
  loadBalancer: {}
