deploy/kubernetes/base/mf_dtm-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-dtm
  name: mf_dtm
spec:
  ports:
    - name: "36789"
      port: 36789
      targetPort: 36789
    - name: "36790"
      port: 36790
      targetPort: 36790
  selector:
    io.kompose.service: mf-dtm
status:
  loadBalancer: {}
