deploy/kubernetes/base/mf_etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-etcd
  name: mf_etcd
spec:
  ports:
    - name: "2379"
      port: 2379
      targetPort: 2379
    - name: "2380"
      port: 2380
      targetPort: 2380
  selector:
    io.kompose.service: mf-etcd
status:
  loadBalancer: {}
