deploy/kubernetes/base/mf_jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../../kubernetes/base
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mf-jaeger
  name: mf_jaeger
spec:
  ports:
    - name: "16686"
      port: 16686
      targetPort: 16686
  selector:
    io.kompose.service: mf-jaeger
status:
  loadBalancer: {}
