deploy/kubernetes/base/mf_net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mf_net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mf_net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mf_net: "true"
